Add FIPS support for ocp and managed_clusters roles
Add FIPS support for clusters deployment in ocp and managed_clusters
roles.

Signed-off-by: Maxim Babushkin <mbabushk@redhat.com>

--- a/roles/managed_cluster/templates/install-config.yaml.j2
+++ b/roles/managed_cluster/templates/install-config.yaml.j2
@@ -73,6 +73,9 @@ platform:
     ingressVIP: {{ item.network_ingress_vip }}
     network: {{ item.network_name }}
 {% endif %}
+{% if item.fips is defined %}
+fips: {{ item.fips }}
+{% endif %}
 pullSecret: "" # skip, hive will inject based on it's secrets
 sshKey: |
     {{ ssh_pub_key }}
