[OCP] - Add creation of gcp credentials
Add GCP credentials creation on the controller machine during openshift
cluster creation.
In case such credentials are missing, need to create them to prevent
cloud platform login failure.

--- a/roles/ocp/templates/cloud-creds.j2
+++ b/roles/ocp/templates/cloud-creds.j2
@@ -2,4 +2,6 @@
 [default]
 aws_access_key_id = {{ clusters_credentials[item.creds_type].aws_access_key_id }}
 aws_secret_access_key = {{ clusters_credentials[item.creds_type].aws_secret_access_key }}
+{% elif item.creds_type == "gcp" %}
+{{ clusters_credentials[item.creds_type].os_service_account_json }}
 {% endif %}
