Rename "managed_cluster" role to "acm_hive_cluster"
Rename "managed_cluster" role to "acm_hive_cluster" to reflect the
actual flow of the role.
The role performs deployment of the clusters by using the hive engine
and the role name should be as much self-explanatory as possible.

--- a/roles/acm_hive_cluster/templates/cluster-deployment.yaml.j2
+++ b/roles/acm_hive_cluster/templates/cluster-deployment.yaml.j2
@@ -1,4 +1,4 @@
-{% set creds = managed_clusters_credentials | selectattr('name', 'equalto', item.credentials) | first %}
+{% set creds = acm_hive_clusters_credentials | selectattr('name', 'equalto', item.credentials) | first %}
 apiVersion: hive.openshift.io/v1
 kind: ClusterDeployment
 metadata:
@@ -53,6 +53,6 @@ spec:
       name: {{ item.name }}-install-config
     sshPrivateKeySecretRef:
       name: {{ item.name }}-ssh-private-key
-    releaseImage: {{ item.managed_cluster_image | default(managed_cluster_image) }}
+    releaseImage: {{ item.hive_cluster_image | default(hive_cluster_image) }}
   pullSecretRef:
     name: {{ item.name }}-pull-secret
