--- a/roles/ocp/templates/install-config.yaml.j2
+++ b/roles/ocp/templates/install-config.yaml.j2
@@ -3,13 +3,9 @@ baseDomain: {{ item.base_domain }}
 compute:
 - hyperthreading: Enabled
   name: worker
-{% if item.cloud.platform == "aws" and item.cloud.instance_type is defined %}
+{% if item.cloud.instance_type is defined %}
   platform:
-    aws:
-      type: {{ item.cloud.instance_type }}
-{% elif item.cloud.platform == "gcp" and item.cloud.instance_type is defined %}
-  platform:
-    gcp:
+    {{ item.cloud.platform }}:
       type: {{ item.cloud.instance_type }}
 {% else %}
   platform: {}
@@ -18,13 +14,9 @@ compute:
 controlPlane:
   hyperthreading: Enabled
   name: master
-{% if item.cloud.platform == "aws" and item.cloud.instance_type is defined %}
+{% if item.cloud.instance_type is defined %}
   platform:
-    aws:
-      type: {{ item.cloud.instance_type }}
-{% elif item.cloud.platform == "gcp" and item.cloud.instance_type is defined %}
-  platform:
-    gcp:
+    {{ item.cloud.platform }}:
       type: {{ item.cloud.instance_type }}
 {% else %}
   platform: {}
@@ -44,12 +36,18 @@ networking:
   - {{ item.network.service }}
 platform:
 {% if item.cloud.platform == "aws" %}
-  aws:
+  {{ item.cloud.platform }}:
     region: {{ item.cloud.region }}
 {% elif item.cloud.platform == "gcp" %}
-  gcp:
+  {{ item.cloud.platform }}:
     region: {{ item.cloud.region }}
     projectID: {{ item.cloud.project_id }}
+{% elif item.cloud.platform == "openstack" %}
+  {{ item.cloud.platform }}:
+    cloud: openstack
+    externalNetwork: {{ item.cloud.external_network }}
+    apiFloatingIP: {{ item.cloud.api_floating_ip }}
+    ingressFloatingIP: {{ item.cloud.ingress_floating_ip }}
 {% endif %}
 publish: External
 {% if item.fips is defined %}
