[ACM_HIVE_CLUSTER] - Add Openstack platform support
- Add Openstack platform support to acm_hive_cluster role
- Update documentation

--- a/roles/acm_hive_cluster/templates/cloud-secret.yaml.j2
+++ b/roles/acm_hive_cluster/templates/cloud-secret.yaml.j2
@@ -9,17 +9,17 @@ data:
 {% if creds.platform == "aws" %}
   aws_access_key_id: {{ creds.aws_access_key_id | b64encode }}
   aws_secret_access_key: {{ creds.aws_secret_access_key | b64encode }}
-{% endif %}
-{% if creds.platform == "gcp" %}
+{% elif creds.platform == "gcp" %}
   projectID: {{ creds.project_id | b64encode }}
   osServiceAccount.json: {{ creds.os_service_account_json | b64encode }}
-{% endif %}
-{% if creds.platform == "azr" %}
+{% elif creds.platform == "azr" %}
   baseDomainResourceGroupName: {{ creds.base_domain_resource_group_name | b64encode }}
   cloudName: {{ creds.cloud_name | b64encode }}
   osServicePrincipal.json: {{ creds.os_service_principal_json | b64encode }}
-{% endif %}
-{% if creds.platform == "vmw" %}
+{% elif creds.platform == "vmw" %}
   username: {{ creds.username | b64encode }}
   password: {{ creds.password | b64encode }}
+{% elif creds.platform == "openstack" %}
+  cloud: {{ 'openstack' | b64encode }}
+  clouds.yaml: {{ lookup('template', 'clouds.yaml.j2') | b64encode }}
 {% endif %}
