--- a/roles/acm_hive_cluster/templates/global-credentials.yaml.j2
+++ b/roles/acm_hive_cluster/templates/global-credentials.yaml.j2
@@ -5,7 +5,11 @@ metadata:
   namespace: {{ item.namespace }}
   labels:
     cluster.open-cluster-management.io/credentials: ""
+{% if item.platform == "openstack" %}
+    cluster.open-cluster-management.io/type: ost
+{% else %}
     cluster.open-cluster-management.io/type: {{ item.platform }}
+{% endif %}
 type: Opaque
 data:
   baseDomain: {{ item.base_domain | b64encode }}
@@ -30,4 +34,14 @@ data:
   datacenter: {{ item.datacenter | b64encode }}
   defaultDatastore: {{ item.default_datastore | b64encode }}
   cacertificate: {{ item.cacertificate | b64encode }}
+{% elif item.platform == "openstack" %}
+  cloud: {{ 'openstack' | b64encode }}
+  clouds.yaml: {{ lookup('template', 'clouds.yaml.j2') | b64encode }}
+  clusterOSImage: {{ item.cluster_os_image | default("") }}
+  disconnectedAdditionalTrustBundle: {{ item.disconnected_additional_trust_bundle | default("") }}
+  imageContentSources: {{ item.image_content_sources | default("") }}
+  httpProxy: {{ item.http_proxy | default("") }}
+  httpsProxy: {{ item.https_proxy | default("") }}
+  noProxy: {{ item.no_proxy | default("") }}
+  os_ca_bundle: {{ item.os_ca_bundle | default("") }}
 {% endif %}
