--- a/roles/acm_hive_cluster/templates/klusterlet-addon-config.yaml.j2
+++ b/roles/acm_hive_cluster/templates/klusterlet-addon-config.yaml.j2
@@ -15,6 +15,8 @@ spec:
     cloud: Azure
 {% elif item.platform == "vmw" %}
     cloud: vSphere
+{% elif item.platform == "openstack" %}
+    cloud: OpenStack
 {% endif %}
     vendor: OpenShift
   applicationManager:
