Add a task appending to existing creds file When a creds file already exists, the role will append the new credentials to the end of this file. When there is no creds file, the role will create a new one. In addition fix the path to the cred_file.

--- a/roles/ocp/templates/cloud-creds.j2
+++ b/roles/ocp/templates/cloud-creds.j2
@@ -1,13 +1,13 @@
 {% set creds = clusters_credentials | selectattr('name', 'equalto', item.credentials) | first %}
 {% if creds.platform == "aws" %}
-[default]
+[rhacm-automation]
 aws_access_key_id = {{ creds.aws_access_key_id }}
 aws_secret_access_key = {{ creds.aws_secret_access_key }}
 {% elif creds.platform == "gcp" %}
 {{ creds.os_service_account_json }}
 {% elif creds.platform == "openstack" %}
 clouds:
-  openstack:
+  rhacm-automation:
     auth:
       auth_url: {{ creds.auth_url }}
       username: "{{ creds.username }}"
