[ACM] - Modify ACM components management
Modify ACM components enablement.
Instead of defining all the components for ACM for each deployment,
modify it to define specific component to be enabled/disable if
needed and the rest will take the default state of the ACM configuration.

--- a/roles/acm/templates/multiclusterhub.yaml.j2
+++ b/roles/acm/templates/multiclusterhub.yaml.j2
@@ -16,9 +16,11 @@ spec:
 {% if deploy_test_env | bool %}
   imagePullSecret: multiclusterhub-operator-pull-secret
 {% endif %}
+{% if acm_components_overrides[0] is defined %}
   overrides:
     components:
-{% for component in acm_components %}
+{% for component in acm_components_overrides %}
     - name: {{ component.name }}
       enabled: {{ component.enabled }}
 {% endfor %}
+{% endif %}
